made grid classnames more specific in order to avoid layout bugs when changing between components

--- a/client/src/components/Artwork/artwork.scss
+++ b/client/src/components/Artwork/artwork.scss
@@ -3,7 +3,7 @@
 .back__button {
   margin: 0 1em;
 }
-.grid {
+.artwork__grid {
   display: flex;
   flex-direction: column;
   align-items: center;
