--- a/client/src/components/Artworks/artworks.scss
+++ b/client/src/components/Artworks/artworks.scss
@@ -1,4 +1,4 @@
-.grid {
+.artworks__grid {
   display: flex;
   flex-direction: column;
   align-items: center;
